fixed alignment of search bar per UX request

--- a/client/src/SASS/TopBar.scss
+++ b/client/src/SASS/TopBar.scss
@@ -37,7 +37,7 @@
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
-    margin-left: 12px;
+    margin-left: 2%;
     svg {
       stroke: $text;
       @include themify($themes) {
